--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^2.0.0+3
   intl: ^0.17.0
   path_provider: ^2.0.2
+  awesome_notifications: ^0.0.6+10
 
 dev_dependencies:
   flutter_test:
